 cmake_minimum_required(VERSION 3.15)
 project(example)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CORE_PATH ../../output/core)

 include_directories(${CORE_PATH}/include .. ../..)
 list(APPEND LIB_DIR ${CORE_PATH}/lib)
 link_directories(${LIB_DIR})
 add_executable(example example.cc)
 target_link_libraries(example -lclink -lpthread )
